--- a/GestureGis2/GestureGis2.csproj
+++ b/GestureGis2/GestureGis2.csproj
@@ -102,6 +102,10 @@
     <Compile Include="Dockpane1ViewModel.cs" />
     <Compile Include="Module1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrainingDock.xaml.cs">
+      <DependentUpon>TrainingDock.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TrainingDockViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AddInContent Include="Images\GenericButtonBlue16.png" />
@@ -117,6 +121,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Dockpane1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TrainingDock.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
